tests/ui/unresolved/unresolved-candidates.stderr
error[E0432]: unresolved import `Trait`
  --> $DIR/unresolved-candidates.rs:6:9
   |
LL |     use Trait;
   |         ^^^^^ no `Trait` in the root
   |
help: consider importing this trait instead
   |
LL |     use a::Trait;
   |         +++

error[E0405]: cannot find trait `Trait` in this scope
  --> $DIR/unresolved-candidates.rs:10:10
   |
LL |     impl Trait for () {}
   |          ^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL +     use a::Trait;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0405, E0432.
For more information about an error, try `rustc --explain E0405`.
